# tds-virtual-ta-private

./: .env.example  .gitignore  LICENSE  README.md  app.py  embedder.py  extract_data.py  pyproject.toml  requirements.txt  setup.py  vercel.json
data/tools-in-data-science-public/: aipipe.md
embeddings/: tds_embeddings.npz  tds_metadata.json
